creating initial project repo with existing scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#-----------------------------------------------------------------------------
+# R specific files   
+#-----------------------------------------------------------------------------
 # History files
 .Rhistory
 .Rapp.history
@@ -11,3 +14,25 @@
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
+
+#-----------------------------------------------------------------------------
+# Project specific directories   
+#-----------------------------------------------------------------------------
+UCI\ HAR\ Dataset
+
+#-----------------------------------------------------------------------------
+# Project specific files
+#-----------------------------------------------------------------------------
+human_activity_recognition_data.zip
+human_activity_recognition_codebook.html
+
+#-----------------------------------------------------------------------------
+# General files
+#-----------------------------------------------------------------------------
+*.xls
+*.xlsx
+*.pdf
+*.doc
+*.docx
+*.bak
+*.zip
